// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render align 1`] = `
<div
  className="cf-12kp2av"
>
  Hello
</div>
`;

exports[`should render bold size 1`] = `
<div
  className="cf-z310y"
>
  Hello
</div>
`;

exports[`should render lowercase 1`] = `
<div
  className="cf-1ez8i2i"
>
  Hello
</div>
`;

exports[`should render normal size 1`] = `
<div
  className="cf-1wd7cvk"
>
  Hello
</div>
`;

exports[`should render small size 1`] = `
<div
  className="cf-xk5sq7"
>
  Hello
</div>
`;

exports[`should render titlecase case 1`] = `
<div
  className="cf-w04jx1"
>
  Hello
</div>
`;

exports[`should render type 1`] = `
<div
  className="cf-1vjexbg"
>
  Hello
</div>
`;
